fix collapse hover effect

--- a/15-case-study3/style.css
+++ b/15-case-study3/style.css
@@ -40,17 +40,17 @@ body{
 .site-header .site-navbar{
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 10px;
 }
-.site-header .site-navbar .nav-list__item{
+.nav-link{
+    padding: 8px 16px;
     font-weight: bold;
     font-size: 1.1rem;
     transition: 0.3s ease;
-}
-.site-header .site-navbar .nav-list__item:hover{
-    background-color: #1AACBD;
-    padding: 4px 6px;
     border-radius: 10px;
+}
+.site-header .site-navbar .nav-link:hover{
+    background-color: #1AACBD;
     
 }
 .site-header .site-title{
